--- a/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
@@ -17,8 +17,9 @@ global without sharing class AdyenAuthWebhookHandler {
                 return handleMissingPaymentAuthorization(notificationRequestItem, req.requestBody.toString());
             }
         } catch (Exception ex) {
-            String message = 'an exception happened: ' + ex.getMessage() + '. Stack trace: ' + ex.getStackTraceString();
-            return insertLogAndReturnResponse(message, paymentAuthorization, notificationRequestItem, req.requestBody.toString(), AdyenB2BConstants.PaymentGatewayLogStatus.FAILED);
+            System.debug(LoggingLevel.ERROR, ex.getMessage());
+            LogEntry.insertLogException(ex, 'Adyen Auth Web Hook Handler Error', AdyenAuthWebhookHandler.class.getName(), 'doPost', req.requestBody?.toString());
+            return '[accepted] but an exception happened';
         }
     }
 
@@ -120,10 +121,6 @@ global without sharing class AdyenAuthWebhookHandler {
             return '[accepted]';
         }
         String messageWithBut = '[accepted] but ' + message;
-        if (messageWithBut.length() > 255) {
-            return messageWithBut.substring(0, 255);
-        } else {
-            return messageWithBut;
-        }
+        return AdyenB2BUtils.safeAssignTextFieldValue(messageWithBut, PaymentGatewayLog.GatewayMessage.getDescribe());
     }
 }
